Fixed logout drop down issue and added light styling for Q and A speech bubbles
When logging out the drop down was not closing, the state was not restet and the event listener was left on.  Also when switching to light mode the speech bubbles remained dark, making the text hard to read.  It was also not obvious when a user was highlighting an option they could click

- Fixed the logout issue by passing in the toggleDropDown method into the drop down list.  I then made a call to the toggleDropDown method when the logout button was clicked.
- Also changed the logout button to be a link as this should be used where possible for navigation over the histor push method.  Removed the call to history.push once the button was changed to a link.  This brought the logout button inline with the rest of the drop down.
- Updated the dropdown list tests to pass in a mocked version of the toggleDropDown method.  Also searched for the element by ID rather than by element tag name as this had been changed from button to link.
- Moved the question and answer speech bubble styling into the main css file
- Created styling for a light version in the light-styling css file
- Added css for the radio button labels which would activate on hover

--- a/public/lightStyling.css
+++ b/public/lightStyling.css
@@ -178,3 +178,50 @@ td, th {
   margin-left: 5%;
   border-right: solid 1px black;
 }
+
+#questionContainer {
+  padding: 10px;
+  background-color: rgba(50, 50, 50, 0.1);
+  width: 75%;
+  border-right: solid 5px rgb(179, 136, 221);
+  border-radius: 5px;
+
+  margin-top: 50px;
+  margin-left: 20px;
+}
+
+#questionContainer::after {
+  content: '';
+    margin-top: -30px;
+    padding-top: 0px;
+    position: relative;
+    bottom: -40px;
+    left: 280px;
+    border-width: 30px 30px 0 0;
+    border-style: solid;
+    border-color: rgba(50, 50, 50, 0.1) transparent;
+    display: block;
+    width: 0;
+}
+
+#answerContainer {
+  padding: 10px;
+  background-color: rgba(50, 50, 50, 0.1);
+  border-left: solid 5px rgb(255, 135, 80);
+  border-radius: 5px;
+  margin-bottom: 30px;
+}
+
+#answerContainer::after {
+  content: '';
+  margin-top: -30px;
+  padding-top: 0px;
+  position: relative;
+  bottom: -40px;
+  left: 20px;
+  border-width: 30px 0 0 30px;
+  border-style: solid;
+  border-color: rgba(50, 50, 50, 0.1) transparent;
+  display: block;
+  width: 0;
+}
